--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,7 +54,7 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/white"
-                android:onClick="onClickAuth"/>
+                android:onClick="onClickAut"/>
 
         </LinearLayout>
 
